--- a/index-START.html
+++ b/index-START.html
@@ -9,9 +9,9 @@
 <body>
 
   <h1>Whack-a-mole! <span class="score">0</span></h1>
-  <button onClick="startGame()">Start!</button>
+  <button>Start!</button>
 
-  <div class="game">
+  <main class="game">
     <div class="hole hole1">
       <div class="mole"></div>
     </div>
@@ -30,13 +30,9 @@
     <div class="hole hole6">
       <div class="mole"></div>
     </div>
-  </div>
+  </main>
 
-<script>
-  const holes = document.querySelectorAll('.hole');
-  const scoreBoard = document.querySelector('.score');
-  const moles = document.querySelectorAll('.mole');
+<script src="script.js"></script>
 
-</script>
 </body>
 </html>
