--- a/index-START.html
+++ b/index-START.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <h1>Whack-a-mole! <span class="score">0</span></h1>
+  <h1>Whack-a-mole!</h1>
+  <h2>Score</h2><span class="score">0</span></h2>
+  <h2>Highest Score<span class="highScore">0</span></h2>
   <button>Start!</button>
 
   <main class="game">
